Fix user icon not showing

--- a/src/app/modules/elements/header/Header.component.css
+++ b/src/app/modules/elements/header/Header.component.css
@@ -26,7 +26,6 @@
 
 
 .buttonStyleBlack{
-  border-style: inset;
   border-width: 2px;
   border-color: rgb(224, 224, 224);
   background-color: white;
